--- a/tasks/templates/list_tasks.html
+++ b/tasks/templates/list_tasks.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,14 +8,48 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../static/main.css">
 </head>
-<body>
-    <h1>Tasks</h1>
 
-<form action="/tasks/new/" method="POST">
-    {% csrf_token %}
-        <input type="text" name="tittle" placeholder="Escribe un Titulo">
-        <textarea name="description" rows="10" placeholder="Escribe una descripción"></textarea>
-        <button type="submit">Guardar</button>
-    </form>
+<body>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 offset-md-4">
+                <h1 class="display-6 fw-bold">Tasks</h1>
+
+                <form action="{% url 'create_tasks' %}" method="POST" class="card card-body bg-secondary">
+                    {% csrf_token %}
+                    <label for="title">Titulo:</label>
+                    <input type="text" name="title" placeholder="Escribe un Titulo" class="form-control mb-2">
+                    <label for="description">Descripción</label>
+                    <textarea name="description" rows="10" placeholder="Escribe una descripción"
+                        class="form-control mb-2"></textarea>
+                    <button type="submit" class="btn btn-success">Guardar</button>
+                </form>
+
+                {% for task in tasks %}
+                <div class="card card-body text-black mt-2 d-flex flex-row justify-content-between">
+                    <div>
+                        <h2>{{ task.title }}</h2>
+                        <p>{{ task.description }}</p>
+                    </div>
+                    <div>
+                        <form class="mb-2" action="{% url 'delete_task' task.id %}" method="POST">
+                            {% csrf_token %}
+                            <button class="btn btn-danger">Eliminar</button>
+                        </form>
+                        <form action="{% url 'edit_task' task.id %}" method="POST">
+                            {% csrf_token %}
+                            <button class="btn btn-warning">Editar</button>
+                        </form>
+                    </div>
+                </div>
+                {% empty %}
+                <h1 class="display-4 text-center">No hay tareas</h1>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+
 </body>
+
 </html>
