--- a/tasks/templates/list_tasks.html
+++ b/tasks/templates/list_tasks.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Task with Django</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../static/main.css">
 </head>
@@ -19,16 +19,28 @@
                 <form action="{% url 'create_tasks' %}" method="POST" class="card card-body bg-secondary">
                     {% csrf_token %}
                     <label for="title">Titulo:</label>
-                    <input type="text" name="title" placeholder="Escribe un Titulo" class="form-control mb-2">
-                    <label for="description">Descripción</label>
+                    <input type="text" name="title" placeholder="Escribe un Titulo" class="form-control mb-2"
+                        value="{{ taskToEdit.title }}" required/>
+                    <label for="description">Descripción:</label>
                     <textarea name="description" rows="10" placeholder="Escribe una descripción"
-                        class="form-control mb-2"></textarea>
-                    <button type="submit" class="btn btn-success">Guardar</button>
+                        class="form-control mb-2" required>{{ taskToEdit.description }}</textarea>
+                    <div class="d-flex flex-row justify-content-end p-1 gap-2">
+                        {% if taskToEdit.id %}
+                        <input type="hidden" name="modo" value="editar"/>
+                        <input type="hidden" name="id" value="{{ taskToEdit.id }}"/>
+                        <button type="submit" class="btn btn-success ml-2" value="editar">Guardar Cambios</button>
+                        <button class="btn btn-danger">Cancelar</button>
+                        {% else %}
+                        <input type="hidden" name="modo" value="guardar"/>
+                        <button type="submit" class="btn btn-success" value="guardar">Guardar</button>
+                        {% endif %}
+                    </div>
                 </form>
 
                 {% for task in tasks %}
                 <div class="card card-body text-black mt-2 d-flex flex-row justify-content-between">
                     <div>
+                        <h2>{{ task.id }}</h2>
                         <h2>{{ task.title }}</h2>
                         <p>{{ task.description }}</p>
                     </div>
@@ -37,9 +49,10 @@
                             {% csrf_token %}
                             <button class="btn btn-danger">Eliminar</button>
                         </form>
-                        <form action="{% url 'edit_task' task.id %}" method="POST">
+                        <form action="" method="POST">
                             {% csrf_token %}
-                            <button class="btn btn-warning">Editar</button>
+                            <input type="hidden" name="id" value="{{task.id}}">
+                            <button type="submit" class="btn btn-warning">Editar</button>
                         </form>
                     </div>
                 </div>
